# Gateway-Simulator

./: CMakeLists.txt  README.md
application/: CMakeLists.txt  SensorMain.cpp
doc/architecture/: Component Diagram.md
include/client_app/: ClientApp.h
include/comm/: CommunicationManager.h
include/crypto/: CryptoManager.h
include/sensor_service/: sensorService.h
include/utils/: ConfigManager.h  Logger.h
src/: CMakeLists.txt
src/client_app/: ClientApp.cpp
src/comm/: CommunicationManager.cpp
src/crypto/: CryptoManager.cpp
src/sensor_service/: SensorService.cpp
src/utils/: ConfigManager.cpp
src/utils/uart_echo/: echo_device.py  host_test.py  readme.txt
